tests/build/cases/widget_new/incorrect_arg_type3.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
   --> cases/widget_new/incorrect_arg_type3.rs:7:40
    |
7   |         background_gradient = 0.deg(), true
    |                               -        ^^^^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
    |                               |
    |                               required by a bound introduced by this call
    |
    = help: the following other types implement trait `IntoVar<T>`:
              <bool as IntoVar<AutoSize>>
              <bool as IntoVar<BlockWindowLoad>>
              <bool as IntoVar<CaptureMode>>
              <bool as IntoVar<Factor>>
              <bool as IntoVar<FontFeatureState>>
              <bool as IntoVar<FontSynthesis>>
              <bool as IntoVar<HitTestMode>>
              <bool as IntoVar<Interactivity>>
            and 7 others
note: required by a bound in `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
   --> $WORKSPACE/zero-ui/src/properties/visual.rs
    |
    | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
    |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
